changes in endpoints
add html file
add number of required characters to every ids
add better view of required characters to id with word last

--- a/reference/common/schemas/update-monitors-model.yaml
+++ b/reference/common/schemas/update-monitors-model.yaml
@@ -6,6 +6,8 @@ properties:
     description: Adresy e-mail do wysyłki powiadomień z monitoringów
     title: Emails
   filter_id:
+    maxLength: 24
+    minLength: 24
     type: string
     description: Identyfikator filtra wykorzystanego do utworzenia monitoringu
     title: Filter Id
