--- a/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
+++ b/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
@@ -14,8 +14,11 @@ parameters:
       - last
       type: string
       description: Zwraca ostatnie dane aktualizacji
+      maxLength: 4
+      minLength: 4
     example: '222222222222222222222222'
     maxLength: 24
+    minLength: 24
   name: id
   in: path
   description: Unikalny identyfikator zarejestrowanej aktualizacji
