--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -7,12 +7,13 @@ parameters:
   schema:
     title: Ids
     type: string
-    example: '222222222222222222222222'
-    maxLength: 24
+    example:
+    - '222222222222222222222222'
+    - '333333333333333333333333'
     minLength: 24
   name: ids
   in: query
-  description: Unikalny identyfikator filtra
+  description: Unikalne identyfikatory filtra
 - required: false
   schema:
     title: Authorization
