--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -12,8 +12,11 @@ parameters:
       - last
       type: string
       description: Zwraca ostatni dostępny filtr
+      maxLength: 4
+      minLength: 4
     example: '222222222222222222222222'
     maxLength: 24
+    minLength: 24
   name: id
   in: path
   description: Unikalny identyfikator filtra
