translate responses and add responses overwriting in merge_spec

--- a/reference/ins_api/paths/announcement-category-v2-dicts-announcement-categories-GET.yaml
+++ b/reference/ins_api/paths/announcement-category-v2-dicts-announcement-categories-GET.yaml
@@ -5,7 +5,7 @@ summary: Get Announcement Category
 operationId: get_announcement_category_v2_dicts_announcement_categories_get
 responses:
   '200':
-    description: Successful Response
+    description: Wynik wyszukiwania słownika
     content:
       application/json:
         schema:
