--- a/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
+++ b/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
@@ -18,25 +18,25 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Retrieve actual user data
+    description: Wynik wyszukiwania danych obecnego użytkownika
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/UserModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
