--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -30,7 +30,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Retrieve filter by id
+    description: Wynik wyszukiwania filtra o określonym identyfikatorze
     content:
       application/json:
         schema:
