--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -13,7 +13,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Retrieve actual user filters list
+    description: Wynik wyszukiwania filtrów aktualnego użytkownika
     content:
       application/json:
         schema:
@@ -22,19 +22,19 @@ responses:
           items:
             $ref: '#/components/schemas/FiltersModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
