--- a/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
+++ b/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
@@ -13,25 +13,25 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Params retrieved
+    description: Wynik wyszukiwania parametrów
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/ParamsModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
