--- a/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
+++ b/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
@@ -367,7 +367,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Get list announcements
+    description: Wynik wyszukiwania ogłoszeń
     content:
       application/json:
         schema:
@@ -376,25 +376,25 @@ responses:
           items:
             $ref: '#/components/schemas/AnnouncementModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '429':
-    description: Too Many Requests
+    description: Wykorzystany limit zapytań do API
     content:
       application/json:
         schema:
