--- a/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
+++ b/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
@@ -19,31 +19,31 @@ requestBody:
   required: true
 responses:
   '200':
-    description: New monitoring assigned to the current user
+    description: Wynik przypisywania monitoringów do użytkownika
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/MonitorModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '429':
-    description: Too Many Requests
+    description: Wykorzystany limit zapytań do API
     content:
       application/json:
         schema:
