--- a/reference/ins_api/paths/fields-v2-dicts-announcement-fields-GET.yaml
+++ b/reference/ins_api/paths/fields-v2-dicts-announcement-fields-GET.yaml
@@ -5,7 +5,7 @@ summary: Get Fields
 operationId: get_fields_v2_dicts_announcement_fields_get
 responses:
   '200':
-    description: Successful Response
+    description: Wynik wyszukiwania słownika
     content:
       application/json:
         schema:
