--- a/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-DELETE.yaml
@@ -23,7 +23,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '204':
-    description: Delete monitors
+    description: Wynik usuwania monitoringów
   '400':
     description: Bad Request
     content:
@@ -31,13 +31,13 @@ responses:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
