--- a/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
@@ -26,7 +26,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Returned the list of monitors assigned to the current user.
+    description: Wynik wyszukiwania monitoringów
     content:
       application/json:
         schema:
@@ -35,19 +35,19 @@ responses:
           items:
             $ref: '#/components/schemas/MonitorModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
