--- a/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
+++ b/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
@@ -13,7 +13,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Returned the list of notifications assigned to the current user.
+    description: Wynik wyszukiwania powiadomień
     content:
       application/json:
         schema:
@@ -22,19 +22,19 @@ responses:
           items:
             $ref: '#/components/schemas/NotificationModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
