--- a/reference/ins_api/paths/report-statuses-v2-dicts-report-statuses-GET.yaml
+++ b/reference/ins_api/paths/report-statuses-v2-dicts-report-statuses-GET.yaml
@@ -5,7 +5,7 @@ summary: Get Report Statuses
 operationId: get_report_statuses_v2_dicts_report_statuses_get
 responses:
   '200':
-    description: Successful Response
+    description: Wynik wyszukiwania słownika
     content:
       application/json:
         schema:
