--- a/reference/ins_api/paths/types-v2-dicts-report-types-GET.yaml
+++ b/reference/ins_api/paths/types-v2-dicts-report-types-GET.yaml
@@ -5,7 +5,7 @@ summary: Get Types
 operationId: get_types_v2_dicts_report_types_get
 responses:
   '200':
-    description: Successful Response
+    description: Wynik wyszukiwania słownika
     content:
       application/json:
         schema:
