--- a/reference/ins_api/paths/updates-v2-updates-GET.yaml
+++ b/reference/ins_api/paths/updates-v2-updates-GET.yaml
@@ -31,7 +31,7 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Retrieve updates list
+    description: Wynik wyszukiwania aktualizacji
     content:
       application/json:
         schema:
@@ -40,19 +40,19 @@ responses:
           items:
             $ref: '#/components/schemas/UpdatesModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
