--- a/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
+++ b/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
@@ -43,31 +43,31 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Returned monitoring with specified id
+    description: Wynik wyszukiwania monitoringów o określonym identyfikatorze
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/MonitorModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '404':
-    description: Not Found
+    description: Nie znaleziono
     content:
       application/json:
         schema:
