--- a/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
@@ -29,25 +29,25 @@ requestBody:
   required: true
 responses:
   '200':
-    description: User monitors updated
+    description: Wynik aktualizacji monitoringów użytkownika
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/MonitorModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
