--- a/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
+++ b/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
@@ -23,31 +23,31 @@ parameters:
   description: Klucz autoryzacji
 responses:
   '200':
-    description: Returned notification with specified id
+    description: Wynik wyszukiwania powiadomienia o określonym identyfikatorze
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/NotificationModel'
   '400':
-    description: Bad Request
+    description: Niewłaściwy format zapytania
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '401':
-    description: Unauthorized
+    description: Niepoprawna autentykacja tokenu
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '403':
-    description: Forbidden
+    description: Nieudana autoryzacja dostępu do API
     content:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
   '404':
-    description: Not Found
+    description: Nie znaleziono
     content:
       application/json:
         schema:
