add required to proper fileds

--- a/reference/common/schemas/filters-model.yaml
+++ b/reference/common/schemas/filters-model.yaml
@@ -85,4 +85,10 @@ properties:
     type: string
     description: Unikalny identyfikator filtra
     title: Id
+required:
+- content
+- items_count
+- creation_datetime
+- name
+- id
 title: FiltersModel
