--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -5,6 +5,20 @@ operationId: get_actual_user_filters_v2_filters_get
 parameters:
 - required: false
   schema:
+    title: Exclude
+    type: array
+    items:
+      enum:
+      - content
+      - items_count
+      - ''
+      type: string
+    default:
+    - content
+  name: exclude
+  in: query
+- required: false
+  schema:
     title: Authorization
     type: string
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
