--- a/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
+++ b/reference/ins_api/paths/create-monitor-v2-monitors-POST.yaml
@@ -1,6 +1,6 @@
 tags:
 - monitors_iapi
-summary: Create Monitor
+summary: Create /v2/monitors
 operationId: create_monitor_v2_monitors_post
 parameters:
 - required: false
