--- a/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
+++ b/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - reports_iapi
-summary: Get Report By Id
+summary: Get /v2/reports/{report_id}
 operationId: get_report_by_id_v2_reports__report_id__get
 parameters:
 - required: true
