--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -1,6 +1,6 @@
 tags:
 - filters_iapi
-summary: Patch User Filters
+summary: Patch /v2/filters/{id}
 operationId: patch_user_filters_v2_filters__id__patch
 parameters:
 - required: true
