--- a/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
@@ -1,6 +1,6 @@
 tags:
 - monitors_iapi
-summary: Patch User Monitors
+summary: Patch /v2/monitors/{id}
 operationId: patch_user_monitors_v2_monitors__id__patch
 parameters:
 - required: true
