--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - filters_iapi
-summary: Get Actual User Filters
+summary: Get /v2/filters
 operationId: get_actual_user_filters_v2_filters_get
 parameters:
 - required: false
