--- a/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
+++ b/reference/ins_api/paths/monitors-v2-monitors-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - monitors_iapi
-summary: Get Monitors
+summary: Get /v2/monitors
 operationId: get_monitors_v2_monitors_get
 parameters:
 - required: false
