--- a/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
+++ b/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - updates_iapi
-summary: Get Update By Id
+summary: Get /v2/updates/{id}
 operationId: get_update_by_id_v2_updates__id__get
 parameters:
 - required: true
