--- a/reference/ins_api/paths/user-params-v2-users-id-params-PATCH.yaml
+++ b/reference/ins_api/paths/user-params-v2-users-id-params-PATCH.yaml
@@ -197,7 +197,7 @@ requestBody:
   required: true
 responses:
   '200':
-    description: Update user params
+    description: Wynik aktualizacji parametrów użytkownika
     content:
       application/json:
         schema:
