translate get_current_user description

--- a/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
+++ b/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
@@ -15,6 +15,13 @@ parameters:
   description: Unikalny identyfikator ogłoszenia
 - required: false
   schema:
+    title: Append First Entry
+    type: boolean
+    default: false
+  name: append_first_entry
+  in: query
+- required: false
+  schema:
     title: Authorization
     type: string
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
