--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -55,7 +55,10 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Pobiera plik raportu o podanym id.
+description: |-
+  Pobiera plik wygenerowanego raportu o podanym `id`.
+
+  Plik raportu można pobrać tylko w sytuacji, gdy status raportu ma wartość `2` (gotowy).
 components:
   schemas:
     $ref: ../../common/schemas.yaml
