--- a/reference/ins_api/paths/updates-v2-updates-GET.yaml
+++ b/reference/ins_api/paths/updates-v2-updates-GET.yaml
@@ -57,7 +57,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca listę aktualizacji dla podanych parametrów z kolekcji `update_record`.
+description: Zwraca listę aktualizacji bazy ogłoszeń dla podanych parametrów.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
