--- a/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
+++ b/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
@@ -52,8 +52,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca powiadomienie o podanym id, jeżeli monitor monitor_id należy do
-  aktualnego użytkownika.
+description: Zwraca powiadomienie o podanym `id`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
