--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -43,9 +43,11 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Usuwa filtry o identyfikatorach przekazanych w parametrze ids w query
-  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
-  Content.
+description: |-
+  Usuwa filtry o identyfikatorach przekazanych w kolejnych parametrach `ids`
+  w query stringu.
+
+  W przypadku sukcesu metoda zwraca kod odpowiedzi `204 No Content`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
