--- a/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
+++ b/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
@@ -59,7 +59,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca raport o podanym id.
+description: Zwraca raport o podanym `id`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
