--- a/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
+++ b/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
@@ -13,7 +13,7 @@ parameters:
     - enum:
       - last
       type: string
-      description: Zwraca ostatnie dane aktualizacji
+      description: Zwraca dane ostatniej aktualizacji bazy ogłoszeń
       maxLength: 4
       minLength: 4
     example: '222222222222222222222222'
@@ -21,7 +21,7 @@ parameters:
     minLength: 24
   name: id
   in: path
-  description: Unikalny identyfikator zarejestrowanej aktualizacji
+  description: Unikalny identyfikator aktualizacji
 - required: false
   schema:
     title: Authorization
@@ -61,7 +61,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca dane aktualizacji o podanym id.
+description: Zwraca dane aktualizacji bazy ogłoszeń o podanym `id`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
