--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -73,7 +73,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca filtr o podanym id.
+description: Zwraca filtr o podanym `id`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
