--- a/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
+++ b/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
@@ -72,7 +72,7 @@ responses:
       application/json:
         schema:
           $ref: '#/components/schemas/Error'
-description: Zwraca monitoring o podanym id.
+description: Zwraca monitoring o podanym `id`.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
