--- a/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
+++ b/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
@@ -1,6 +1,6 @@
 tags:
 - filters_iapi
-summary: Create /v2/filters
+summary: POST /v2/filters
 operationId: create_filter_v2_filters_post
 parameters:
 - required: false
