--- a/reference/ins_api/paths/user-params-v2-users-id-params-PATCH.yaml
+++ b/reference/ins_api/paths/user-params-v2-users-id-params-PATCH.yaml
@@ -1,7 +1,7 @@
 tags:
 - params_iapi
 - admin_iapi
-summary: Patch /v2/users/{id}/params
+summary: PATCH /v2/users/{id}/params
 description: Admin flag is required.
 operationId: patch_user_params_v2_users__id__params_patch
 parameters:
