--- a/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
+++ b/reference/ins_api/paths/actual-user-params-v2-params-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - params_iapi
-summary: Get /v2/params
+summary: GET /v2/params
 operationId: get_actual_user_params_v2_params_get
 parameters:
 - required: false
