--- a/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
+++ b/reference/ins_api/paths/current-user-v2-users-me-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - users_iapi
-summary: Get /v2/users/me
+summary: GET /v2/users/me
 description: Zwraca aktualne informacje o użytkowniku
 operationId: get_current_user_v2_users_me_get
 parameters:
