--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -1,6 +1,6 @@
 tags:
 - filters_iapi
-summary: Delete /v2/filters
+summary: DELETE /v2/filters
 operationId: delete_filter_v2_filters_delete
 parameters:
 - required: false
