--- a/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
+++ b/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
@@ -1,6 +1,6 @@
 tags:
 - notifications_iapi
-summary: Get /v2/notifications/{id}
+summary: GET /v2/notifications/{id}
 operationId: get_user_notification_by_id_v2_notifications__id__get
 parameters:
 - required: true
