add examples to dicts

--- a/reference/common/schemas/info-fields.yaml
+++ b/reference/common/schemas/info-fields.yaml
@@ -12,3 +12,6 @@ properties:
     description: Etykieta
     title: Label
 title: InfoFields
+example:
+  id: K
+  label: Krajowy Rejestr Zadłużonych
